--- a/0-projects/.vscode/tasks.json
+++ b/0-projects/.vscode/tasks.json
@@ -10,7 +10,7 @@
 				"${file}",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}",
-				"-pedantic-errors"
+				"-std=c++17"
 			],
 			"options": {
 				"cwd": "${workspaceFolder}"
