--- a/2-projects/quiz/.vscode/tasks.json
+++ b/2-projects/quiz/.vscode/tasks.json
@@ -2,12 +2,13 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "cppbuild",
+			"type": "shell",
 			"label": "C/C++: g++ build active file",
 			"command": "/usr/bin/g++",
 			"args": [
 				"-g",
 				"${file}",
+				"${fileDirname}/input.cpp"
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}"
 			],
@@ -20,8 +21,7 @@
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			},
-			"detail": "compiler: /usr/bin/g++"
+			}
 		}
 	]
 }
