Finished chapter 12 quiz question 1

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,7 @@
 			"args": [
 				"-g",
 				"${file}",
+				"${fileDirname}/point2d.cpp",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}"
 			],
