--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
 			"args": [
 				"-g",
 				"${file}",
-				"${fileDirname}/point2d.cpp",
+				"${fileDirname}/monster.cpp",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}"
 			],
