Finished chapter 12 quizes

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
 			"args": [
 				"-g",
 				"${file}",
-				"${fileDirname}/monster.cpp",
+				// "${fileDirname}/monster.cpp",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}"
 			],
